--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "NODE_ENV=test jest",
         "start": "nodemon index.js",
         "prettify": "prettier '**/*.{js,json}' --write"
     },
@@ -35,7 +35,10 @@
         "node": "12.19.0"
     },
     "devDependencies": {
+        "jest": "^28.1.0",
         "nodemon": "^2.0.7",
-        "prettier": "^2.6.2"
+        "prettier": "^2.6.2",
+        "sqlite3": "^5.0.8",
+        "supertest": "^6.2.3"
     }
 }
